Spinner loader function

--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cannabis Harm Reduction Study</title>
 
-    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon"/>
-    <link rel="stylesheet" href="assets/css/main.min.css"/>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+    <link rel="stylesheet" type="text/css" href="./assets/css/all.min.css"/>
 
 </head>
 <body>
+    <div class="preloader">
+        <div class="spinner"></div>
+    </div>
 
 
 
-
-    <script src="assets/js/utils/jquery-3.7.1.min.js"></script>
-    <script src="assets/js/main.js"></script>
+    <script src="/assets/js/utils/jquery-3.7.1.min.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
