--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cannabis Harm Reduction Study</title>
+    <title>Youth Harm Reduction Stories</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/all.min.css"/>
@@ -14,9 +14,79 @@
         <div class="spinner"></div>
     </div>
 
+    <div class="header-bar">
+        <div class="nav-logo">
+          <h3 class="logo-text">Youth Harm Reduction</h3>
+          <!-- <img src="assets/images/logo.png" alt="YouthHarmReduction" /> -->
+        </div>
+  
+        <div class="navbox">
+          <div class="burger">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
+          <nav class="navbar">
+            <a href="#intro" class="nav-link active">Home</a>
+            <a href="#about" class="nav-link">About Us</a>
+            <a href="#stories" class="nav-link">Stories</a>
+            <a href="#events" class="nav-link">Events</a>
+            <a href="#resources" class="nav-link">Resources</a>
+            <a href="#contacts" class="nav-link">Contact</a>
+          </nav>
+        </div>
+  
+        <div class="nav-filter"></div>
+      </div>
 
 
-    <script src="/assets/js/utils/jquery-3.7.1.min.js"></script>
-    <script src="/assets/js/main.js"></script>
+      <header id="intro" class="section header-section">
+
+      </header>
+
+      <main class="main">
+
+        <!-- Section About -->
+        <section id="about" class="section">
+          <div class="section-container">
+            <h2 class="section-header">About</h2>
+          </div>
+        </section>
+  
+        <!-- Section Stories  -->
+        <section id="stories" class="section">
+          <div class="section-container">
+            <h2 class="section-header">Stories</h2>
+          </div>
+        </section>
+  
+        <!-- Section Events -->
+        <section id="events" class="section">
+          <div class="section-container">
+            <h2 class="section-header">Events</h2>
+          </div>
+        </section>
+  
+        <!-- Section Resources-->
+        <section id="resources" class="section">
+          <div class="section-container">
+            <h2 class="section-header">Resources</h2>
+          </div>
+        </section>
+  
+      </main>
+  
+      <button type="button" class="to-top-btn"></button>
+  
+      <footer class="footer">
+        <div class="footer-copyright">
+          All right reserved &copy;
+          <span class="copyright-year">2023</span>
+        </div>
+      </footer>
+
+
+    <script src="./assets/js/utils/jquery-3.7.1.min.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
