File structure update

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#stories" class="nav-link">Stories</a>
             <a href="#events" class="nav-link">Events</a>
             <a href="#resources" class="nav-link">Resources</a>
-            <a href="#contacts" class="nav-link">Contact</a>
+            <a href="#footer" class="nav-link">Contact</a>
           </nav>
         </div>
   
@@ -78,7 +78,7 @@
   
       <button type="button" class="to-top-btn"></button>
   
-      <footer class="footer">
+      <footer class="footer" id="footer">
         <div class="footer-copyright">
           All right reserved &copy;
           <span class="copyright-year">2023</span>
