About section markup (two columns)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </div>
           <nav class="navbar">
             <a href="#intro-section" class="nav-link active">Home</a>
-            <a href="#about" class="nav-link">About Us</a>
+            <a href="#about" class="nav-link">About</a>
             <a href="#stories" class="nav-link">Stories</a>
             <a href="#events" class="nav-link">Events</a>
             <a href="#resources" class="nav-link">Resources</a>
@@ -40,7 +40,7 @@
     </div>
 
 
-    <header id="intro-section" class="section header-section">
+    <header id="intro-section" class="header-section">
 
       <video id="intro-video" class="intro-video-box" preload="auto" poster="./assets/media/intro-poster.jpg" loop>
         <source src="./assets/media/videos/Intro-Video.mp4" type="video/mp4">
@@ -65,8 +65,21 @@
 
       <!-- Section About -->
       <section id="about" class="section">
+        <h2 class="section-header">About Us</h2>
         <div class="section-container">
-          <h2 class="section-header">About</h2>
+          <div class="about-box">
+            <div class="about-img-box">
+              <img src="./assets/media/images/photos/about.jpg" alt="">
+            </div>
+            <div class="about-text-box">
+              <p>In Spring 2024, nine young adults created their own short films about cannabis use and harm reduction.</p>
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quis minus in vitae, impedit perferendis aliquam. Ipsa officiis vitae nulla officia tempora iure expedita quod totam deleniti, et, blanditiis vel?
+              Dolor maiores nulla expedita quos dolorum asperiores quo molestias nisi quod architecto saepe atque eligendi nobis neque eos aliquid aliquam amet consectetur reiciendis laborum itaque vitae, distinctio animi quia. Eius.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quas illo dolor non deserunt, culpa qui voluptates et aliquid voluptatibus laudantium a voluptate veritatis fugiat quisquam nemo necessitatibus iusto soluta?
+              Similique quaerat suscipit doloribus, temporibus blanditiis nisi aut labore autem ex vel illo explicabo, voluptatibus amet quia? Deleniti expedita, velit beatae impedit iure voluptas rem consequatur tenetur doloribus fugiat nisi.</p>
+            </div>
+
+          </div>
         </div>
       </section>
 
