--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Youth Harm Reduction Stories</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/all.min.css"/>
 
 </head>
@@ -40,7 +41,7 @@
     </div>
 
 
-    <header id="intro-section" class="header-section">
+    <header id="intro-section" class="header-section active-trigger">
 
       <video id="intro-video" class="intro-video-box" preload="auto" poster="./assets/media/intro-poster.jpg" loop>
         <source src="./assets/media/videos/Intro-Video.mp4" type="video/mp4">
@@ -50,8 +51,8 @@
       <div class="intro-overlay">
 
         <div class="overlay-content">
-            <h2 class="intro-heading">Young Adult Digital Storytelling</h2>
-            <h3 class="intro-subheading">Cannabis Harm Reduction Project</h3>
+            <h2 class="intro-heading" data-aos="zoom-in" data-aos-duration="1500">Young Adult Digital Storytelling</h2>
+            <h3 class="intro-subheading" data-aos="zoom-in" data-aos-duration="1500">Cannabis Harm Reduction Project</h3>
             <button id="intro-play" class="intro-play-btn" type="button"></button>
         </div>
 
@@ -64,12 +65,12 @@
     <main class="main">
 
       <!-- Section About -->
-      <section id="about" class="section">
+      <section id="about" class="section active-trigger" data-aos="fade-up" data-aos-duration="1500">
         <h2 class="section-header">About Us</h2>
         <div class="section-container">
           <div class="about-box">
             <div class="about-img-box">
-              <img src="./assets/media/images/photos/about.jpg" alt="">
+              <img src="./assets/media/images/photos/about-horizontal.jpg" alt="">
             </div>
             <div class="about-text-box">
               <p>In Spring 2024, nine young adults created their own short films about cannabis use and harm reduction.</p>
@@ -84,21 +85,21 @@
       </section>
 
       <!-- Section Stories  -->
-      <section id="stories" class="section">
+      <section id="stories" class="section active-trigger">
         <div class="section-container">
           <h2 class="section-header">Stories</h2>
         </div>
       </section>
 
       <!-- Section Events -->
-      <section id="events" class="section">
+      <section id="events" class="section active-trigger">
         <div class="section-container">
           <h2 class="section-header">Events</h2>
         </div>
       </section>
 
       <!-- Section Resources-->
-      <section id="resources" class="section">
+      <section id="resources" class="section active-trigger">
         <div class="section-container">
           <h2 class="section-header">Resources</h2>
         </div>
@@ -117,6 +118,7 @@
 
 
     <script src="./assets/js/utils/jquery-3.7.1.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
