--- a/index.html
+++ b/index.html
@@ -175,8 +175,20 @@
 
       <!-- Section Events -->
       <section id="events" class="section active-trigger">
+        <h2 class="section-header">Events</h2>
         <div class="section-container">
-          <h2 class="section-header">Events</h2>
+          <div class="events-grid">
+            <a href="#" class="event-box">
+              <div class="event-thumb-box">
+                <img src="event-1.jpg" alt="Event" class="event-img">
+              </div>
+              <div class="event-content-box">
+                <h6 class="event-heading">Event name</h6>
+                <p class="event-date">10 Nov, 2024</p>
+                <p class="event-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p>
+              </div>
+            </a>
+          </div>
         </div>
       </section>
 
