Events section desktop + mobile markup

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           <nav class="navbar">
             <a href="#intro-section" class="nav-link active">Home</a>
             <a href="#stories" class="nav-link">Stories</a>
-            <a href="#about" class="nav-link">About</a>
             <a href="#events" class="nav-link">Events</a>
+            <a href="#about" class="nav-link">About</a>
             <a href="#resources" class="nav-link">Resources</a>
             <a href="#footer" class="nav-link">Contacts</a>
           </nav>
@@ -155,6 +155,106 @@
         </div>
       </section>
       
+      <!-- Section Events -->
+      <section id="events" class="section active-trigger"  data-aos="fade-up" data-aos-duration="1500">
+        <h2 class="section-header">Our Events</h2>
+        <div class="section-container">
+          <ul class="events-container">
+            <li class="event-box">
+              <a href="#" class="event-link">
+                <div class="event-tag-bar">
+                  <div class="event-tag">Conference</div>
+                  <div class="event-tag tag-option-2">Online</div>
+                </div>
+                <div class="event-thumb-box">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                </div>
+                <div class="event-content-box">
+                  <h6 class="event-header">European Behavioural Pharmacology Society</h6>
+                  <p class="event-date">26 September, 2024</p>
+                  <p class="event-location">Banff, Canada</p>
+                  <p class="event-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nesciunt accusamus non ratione qui repellendus, laboriosam reiciendis minus dolor fugit, eius fuga harum et, fugiat maiores nisi. Sunt, quia iure!</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="event-box">
+              <a href="#" class="event-link">
+                <div class="event-tag-bar">
+                  <div class="event-tag">Event</div>
+                  <div class="event-tag tag-option-1">In Person</div>
+                </div>
+                <div class="event-thumb-box">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                </div>
+                <div class="event-content-box">
+                  <h6 class="event-header">Kitchen Table Night</h6>
+                  <p class="event-date">28 Nov, 2024</p>
+                  <p class="event-location">Calgary, Canada</p>
+                  <p class="event-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nesciunt accusamus non ratione qui repellendus, laboriosam reiciendis minus dolor fugit, eius fuga harum et, fugiat maiores nisi. Sunt, quia iure!</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="event-box">
+              <a href="#" class="event-link">
+                <div class="event-tag-bar">
+                  <div class="event-tag">Event</div>
+                  <div class="event-tag tag-option-1">In Person</div>
+                </div>
+                <div class="event-thumb-box">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                </div>
+                <div class="event-content-box">
+                  <h6 class="event-header">Science in the Cinema</h6>
+                  <p class="event-date">25 March, 2025</p>
+                  <p class="event-location">Calgary, Canada</p>
+                  <p class="event-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nesciunt accusamus non ratione qui repellendus, laboriosam reiciendis minus dolor fugit, eius fuga harum et, fugiat maiores nisi. Sunt, quia iure!</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="event-box">
+              <a href="#" class="event-link">
+                <div class="event-tag-bar">
+                  <div class="event-tag">Conference</div>
+                  <div class="event-tag tag-option-1">In Person</div>
+                </div>
+                <div class="event-thumb-box">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                </div>
+                <div class="event-content-box">
+                  <h6 class="event-header">Manitoba Harm Reduction Network</h6>
+                  <p class="event-date">February, 2025</p>
+                  <p class="event-location">Winnipeg, Canada</p>
+                  <p class="event-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nesciunt accusamus non ratione qui repellendus, laboriosam reiciendis minus dolor fugit, eius fuga harum et, fugiat maiores nisi. Sunt, quia iure!</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="event-box">
+              <a href="#" class="event-link">
+                <div class="event-tag-bar">
+                  <div class="event-tag">Conference</div>
+                  <div class="event-tag tag-option-2">Online</div>
+                </div>
+                <div class="event-thumb-box">
+                  <img src="./assets/media/intro-poster.jpg" alt="Event" class="event-img">
+                </div>
+                <div class="event-content-box">
+                  <h6 class="event-header">Science in the Cinema</h6>
+                  <p class="event-date">April, 2025</p>
+                  <p class="event-location">Bogota, Colombia</p>
+                  <p class="event-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nesciunt accusamus non ratione qui repellendus, laboriosam reiciendis minus dolor fugit, eius fuga harum et, fugiat maiores nisi. Sunt, quia iure!</p>
+                </div>
+              </a>
+            </li>
+
+          </ul>
+        </div>
+      </section>
+
+
       <!-- Section About -->
       <section id="about" class="section active-trigger" data-aos="fade-up" data-aos-duration="1500">
         <h2 class="section-header">About Us</h2>
@@ -175,24 +275,6 @@
         </div>
       </section>
 
-      <!-- Section Events -->
-      <section id="events" class="section active-trigger">
-        <h2 class="section-header">Events</h2>
-        <div class="section-container">
-          <div class="events-grid">
-            <a href="#" class="event-box">
-              <div class="event-thumb-box">
-                <img src="event-1.jpg" alt="Event" class="event-img">
-              </div>
-              <div class="event-content-box">
-                <h6 class="event-heading">Event name</h6>
-                <p class="event-date">10 Nov, 2024</p>
-                <p class="event-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit...</p>
-              </div>
-            </a>
-          </div>
-        </div>
-      </section>
 
       <!-- Section Resources-->
       <section id="resources" class="section active-trigger">
