--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           </div>
           <nav class="navbar">
             <a href="#intro-section" class="nav-link active">Home</a>
+            <a href="#about" class="nav-link">About</a>
             <a href="#stories" class="nav-link">Stories</a>
             <a href="#events" class="nav-link">Events</a>
-            <a href="#about" class="nav-link">About</a>
             <a href="#resources" class="nav-link">Resources</a>
             <a href="#footer" class="nav-link">Contacts</a>
           </nav>
@@ -68,10 +68,41 @@
 
     <main class="main">
 
+      <!-- Section About -->
+      <section id="about" class="section active-trigger">
+        <h2 class="section-header" data-aos="fade-zoom-in" data-aos-duration="1500">About the Project</h2>
+        <div class="section-container">
+          <div class="about-box">
+            <div class="about-text-box" data-aos="fade-up" data-aos-duration="1500">
+              <h5>Ultimately, this project aims to:</h5>
+
+              <ul>
+                <li>Build a deeper understanding of the realities of cannabis use among young adults and highlight their lived experiences.</li>
+                <li>Promote harm reduction strategies that are effective, accessible, and youth-friendly.</li>
+                <li>Influence public health approaches to be more inclusive and reflective of youth voices.</li>
+              </ul>
+
+            </div>
+
+            <div class="about-text-box" data-aos="fade-up" data-aos-duration="1500">
+              <p>The project utilizes Digital Storytelling (DST), a participatory and creative process where participants produce 3-5 minute video stories using images, audio, video, and narration. DST is especially effective in youth-centered projects because it empowers young people to take control of their narratives. This process encourages self-reflection and creative expression, helping participants explore the deeper meaning behind their cannabis use and the role harm reduction strategies play in their lives.</p>
+            </div>
+
+            <div class="about-text-box" data-aos="fade-up" data-aos-duration="1500">
+              <p>In Spring 2024, nine young adults from Alberta and Ontario took part in a two-day DST workshop. During the workshop, they created short films about their cannabis use and harm reduction experiences. Each story focuses on a meaningful moment related to cannabis use and concludes with practical harm reduction principles, helping other young people make safer, more informed decisions.</p>
+              <br>
+              <p>The stories co-created in this workshop are designed to engage peers, educators, and youth allies across Canada by providing real-life examples of harm reduction in action. Through sharing these stories, the project aims to spark conversations nationwide about how to better support young adults in making informed choices about cannabis. The stories will be widely disseminated via social media, film festivals, and community events to reach youth, educators, health professionals, and policymakers.</p>
+            </div>
+
+          </div>
+
+        </div>
+      </section>
+
       
       <!-- Section Stories  -->
       <section id="stories" class="section active-trigger" data-aos="fade-up" data-aos-duration="1500">
-        <h2 class="section-header">Stories</h2>
+        <h2 class="section-header" data-aos="fade-zoom-in" data-aos-duration="1500">Stories</h2>
         <div class="section-container" style="position: relative;">
           <div class="swiper-box">
             <div class="stories-slider">
@@ -157,7 +188,7 @@
       
       <!-- Section Events -->
       <section id="events" class="section active-trigger"  data-aos="fade-up" data-aos-duration="1500">
-        <h2 class="section-header">Our Events</h2>
+        <h2 class="section-header" data-aos="fade-zoom-in" data-aos-duration="1500">Our Events</h2>
         <div class="section-container">
           <ul class="events-container">
             <li class="event-box">
@@ -254,32 +285,10 @@
         </div>
       </section>
 
-
-      <!-- Section About -->
-      <section id="about" class="section active-trigger" data-aos="fade-up" data-aos-duration="1500">
-        <h2 class="section-header">About Us</h2>
-        <div class="section-container">
-          <div class="about-box">
-            <div class="about-img-box">
-              <img src="./assets/media/images/photos/about-horizontal.jpg" alt="">
-            </div>
-            <div class="about-text-box">
-              <p>In Spring 2024, nine young adults created their own short films about cannabis use and harm reduction.</p>
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam quis minus in vitae, impedit perferendis aliquam. Ipsa officiis vitae nulla officia tempora iure expedita quod totam deleniti, et, blanditiis vel?
-              Dolor maiores nulla expedita quos dolorum asperiores quo molestias nisi quod architecto saepe atque eligendi nobis neque eos aliquid aliquam amet consectetur reiciendis laborum itaque vitae, distinctio animi quia. Eius.</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate quas illo dolor non deserunt, culpa qui voluptates et aliquid voluptatibus laudantium a voluptate veritatis fugiat quisquam nemo necessitatibus iusto soluta?
-              Similique quaerat suscipit doloribus, temporibus blanditiis nisi aut labore autem ex vel illo explicabo, voluptatibus amet quia? Deleniti expedita, velit beatae impedit iure voluptas rem consequatur tenetur doloribus fugiat nisi.</p>
-            </div>
-
-          </div>
-        </div>
-      </section>
-
-
       <!-- Section Resources-->
       <section id="resources" class="section active-trigger">
         <div class="section-container">
-          <h2 class="section-header">Resources</h2>
+          <h2 class="section-header" data-aos="fade-zoom-in" data-aos-duration="1500">Resources</h2>
         </div>
       </section>
 
