About section layout updates + minor markup changes

--- a/index.html
+++ b/index.html
@@ -85,11 +85,13 @@
             </div>
 
             <div class="about-text-box" data-aos="fade-up" data-aos-duration="1500">
-              <p>The project utilizes Digital Storytelling (DST), a participatory and creative process where participants produce 3-5 minute video stories using images, audio, video, and narration. DST is especially effective in youth-centered projects because it empowers young people to take control of their narratives. This process encourages self-reflection and creative expression, helping participants explore the deeper meaning behind their cannabis use and the role harm reduction strategies play in their lives.</p>
+              <p>The project utilizes Digital Storytelling (DST), a participatory and creative process where participants produce 3-5 minute video stories using images, audio, video, and narration. DST is especially effective in youth-centered projects because it empowers young people to take control of their narratives.</p>
+              <br>
+              <P>This process encourages self-reflection and creative expression, helping participants explore the deeper meaning behind their cannabis use and the role harm reduction strategies play in their lives.</P>
             </div>
 
             <div class="about-text-box" data-aos="fade-up" data-aos-duration="1500">
-              <p>In Spring 2024, nine young adults from Alberta and Ontario took part in a two-day DST workshop. During the workshop, they created short films about their cannabis use and harm reduction experiences. Each story focuses on a meaningful moment related to cannabis use and concludes with practical harm reduction principles, helping other young people make safer, more informed decisions.</p>
+              <p>In <span class="text-underline">Spring 2024</span>, nine young adults from Alberta and Ontario took part in a two-day DST workshop. During the workshop, they created short films about their cannabis use and harm reduction experiences. Each story focuses on a meaningful moment related to cannabis use and concludes with practical harm reduction principles, helping other young people make safer, more informed decisions.</p>
               <br>
               <p>The stories co-created in this workshop are designed to engage peers, educators, and youth allies across Canada by providing real-life examples of harm reduction in action. Through sharing these stories, the project aims to spark conversations nationwide about how to better support young adults in making informed choices about cannabis. The stories will be widely disseminated via social media, film festivals, and community events to reach youth, educators, health professionals, and policymakers.</p>
             </div>
