--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youth Harm Reduction Stories</title>
 
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/media/images/utils/favicon.ico"/>
 
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" >
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
@@ -179,10 +179,8 @@
               </div>
             </div>
           </div>
-          <!-- If we need pagination -->
           <div class="swiper-pagination"></div>
           
-          <!-- If we need navigation buttons -->
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
         </div>
@@ -285,6 +283,17 @@
 
           </ul>
         </div>
+      </section>
+
+      <section class="parallax-section bottom-parallax">
+        
+        <div class="content">
+          <h5 class="content-header">In Spring 2024, nine young adults created their own short films about cannabis use and harm reduction</h5>
+          <button type="button" class="parallax-btn watch-intro">
+            Watch how the stories are made
+          </button>
+        </div>
+
       </section>
 
     </main>
