Some markup and script upgrades | Navigation scroll update

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
                     <a href="./pages/story.html" class="story-link">
                       Watch story
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
@@ -131,6 +132,7 @@
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
                     <a href="./pages/story.html" class="story-link">
                       Watch story
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
@@ -144,6 +146,7 @@
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
                     <a href="./pages/story.html" class="story-link">
                       Watch story
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
@@ -157,6 +160,7 @@
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
                     <a href="./pages/story.html" class="story-link">
                       Watch story
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
@@ -170,6 +174,7 @@
                     <p class="story-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Lorem ipsum dolor sit amet</p>
                     <a href="./pages/story.html" class="story-link">
                       Watch story
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><g><path d="M18.707,12.707l-3,3a1,1,0,0,1-1.414-1.414L15.586,13H6a1,1,0,0,1,0-2h9.586L14.293,9.707a1,1,0,0,1,1.414-1.414l3,3A1,1,0,0,1,18.707,12.707Z"/></g></svg>
                     </a>
                   </div>
                   <div class="story-shadow"></div>
@@ -289,8 +294,11 @@
         
         <div class="content">
           <h5 class="content-header">In Spring 2024, nine young adults created their own short films about cannabis use and harm reduction</h5>
-          <button type="button" class="parallax-btn watch-intro">
-            Watch how the stories are made
+          <button type="button" class="primary-btn with-l-ico watch-intro">
+            <span class="btn-ico-left">
+              <svg xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16.933333 21.1666675" version="1.1" x="0px" y="0px"><g transform="translate(0,-280.06665)"><path style="opacity:1;fill:#FFFFFF;fill-opacity:1;fill-rule:nonzero;stroke:none;stroke-width:0.08356888;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1;paint-order:fill markers stroke" d="m 8.4666477,282.71249 a 1.9071424,1.9071424 0 0 0 -1.5724381,0.82819 l -4.6707064,8.08985 a 1.9071424,1.9071424 0 0 0 0,1.6e-4 1.9071424,1.9071424 0 0 0 0.06893,1.77582 1.9071424,1.9071424 0 0 0 1.5235488,0.94764 h 9.301165 a 1.9071424,1.9071424 0 0 0 1.523711,-0.94764 1.9071424,1.9071424 0 0 0 0.06893,-1.77598 l -4.660603,-8.07242 a 1.9071424,1.9071424 0 0 0 -1.5825415,-0.84562 z"/></g></svg>
+            </span>
+             Watch how the stories are made
           </button>
         </div>
 
