Mobile devices markup updates

--- a/pages/stories/story.html
+++ b/pages/stories/story.html
@@ -52,9 +52,9 @@
         </nav>
 
         <div class="text-container">
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo, sint velit voluptas natus cupiditate beatae. Unde doloribus expedita quos quia, iste quidem cum repudiandae quibusdam, odit illum temporibus iusto qui!
-          Praesentium aperiam in tempore amet incidunt, minima nam autem iure, esse hic nisi eos nobis illum! Assumenda, aliquam optio ut provident quidem quibusdam libero, accusantium excepturi necessitatibus a, sunt tempore.
-          Incidunt aspernatur harum repudiandae esse sapiente dolorem repellendus commodi dolor eaque rerum ullam vitae necessitatibus ad mollitia perferendis, nulla maiores reiciendis cupiditate facilis iusto quia! Dignissimos dolore corrupti similique autem.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum hic magni accusantium eius maiores necessitatibus laboriosam fugiat quod nemo sit nobis amet fuga esse, nisi dicta culpa molestias aliquam exercitationem?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum hic magni accusantium eius maiores necessitatibus laboriosam fugiat quod nemo sit nobis amet fuga esse, nisi dicta culpa molestias aliquam exercitationem?</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum hic magni accusantium eius maiores necessitatibus laboriosam fugiat quod nemo sit nobis amet fuga esse, nisi dicta culpa molestias aliquam exercitationem?</p>
         </div>
 
       </div>
